# NautilusWebPortal

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  app.py  auth.py  compose.yaml  docker-bake.hcl  docker-compose.yml  kubewrapper.py  nwp-connect  pyproject.toml  update_kubeconfig.py
.githooks/: pre-commit
docs/: 01_login_system.md  02_restructure_and_tests.md  03_spa_rewrite.md  04_tools_stage.md
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  api.ts  main.tsx
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: NavBar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: AdminPage.tsx  HomePage.tsx  InvitePage.tsx  LoginPage.tsx
nautilus_web_portal/: __init__.py  api.py  auth.py  db.py  invites.py  users.py  views.py
nautilus_web_portal/templates/: admin.html  base.html  index.html  invite.html  login.html
tests/: conftest.py  test_auth.py  test_db.py  test_invite.py  test_users.py
tools/: Dockerfile
